--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="css/semantic/semantic.min.js"></script>
 <script src="js/detect.min.js"></script>
-<script src="js/install.js"></script>
 
 <body>
 
@@ -29,7 +28,10 @@
 		  </h1>
 		  <h2>Bajate la aplicación y cuidate mejor del Covid-19</h2>
 		  <div class="ui huge yellow message" id="chromemessage">
-			    Ingresa a este sitio desde tu telefono usando <b>Google Chrome</b> y luego instalá la aplicación.<br/>			    
+			    Ingresa a este sitio desde tu telefono usando <b>Google Chrome</b> y luego instalá la aplicación.
+		  </div>
+		  <div class="ui huge green message" id="installed" style="display:none;">
+			    La aplicación se instalo correctamente. Cerrá el navegador y busca el ícono de la aplicación.			    
 		  </div>
 		  <div class="ui massive primary button" id="install">Instalar <i class="right cloud download icon"></i></div>
 		 	  
@@ -48,5 +50,8 @@
     </div>
   </div>
 </div>
+
+<script src="js/install.js"></script>
+
 </body>
 </html>
