--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">    
 <meta name="description" content="Covid19">
-<meta name="theme-color" content="#00b5ad">
+<meta name="theme-color" content="#ffffff">
 <!--Let browser know website is optimized for mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>Covid19</title>
