--- a/app.html
+++ b/app.html
@@ -17,35 +17,51 @@
 
 
 <div class="ui top fixed menu">
-    <div class="item">    
-      <img src="img/icons/logo-128.png" class="image">   
-    </div>
-    <a class="item" onclick="next(3)"><i class="icon user"></a>
-    <a class="item" onclick="next(4)"><i class="icon users"></a>
-    <a class="item" onclick="next(5)"><i class="icon ambulance"></a>
+    <div class="item"><img src="img/icons/logo-128.png"></div>
+    <a class="item" onclick="next(3)">Mis datos</a>
+    <a class="item" onclick="next(4)">Contactos</a>
+    <a class="item" onclick="next(5)">Contagiados</a>
 </div>
 
 
 <div class="ui black segment" id="registro">
-registro
+  <div class="ui middle aligned center aligned grid">
+  <div class="column">
+  registro
+  </div>
+  </div>
 </div>
 
 
 <div class="ui black segment" id="inicio">
-inicio sesion
+  <div class="ui middle aligned center aligned grid">
+  <div class="column">
+  inicio sesion
+  </div>
+  </div>
 </div>
 
 
 <div class="ui black segment" id="datos">
-datos
+  <div class="ui middle aligned center aligned grid">
+  <div class="column">
+  datos
 </div>
 
 <div class="ui black segment" id="contactos">
-contactos
+  <div class="ui middle aligned center aligned grid">
+  <div class="column">
+  contactos
+  </div>
+  </div>
 </div>
 
 <div class="ui black segment" id="contagiados">
-contagiados
+  <div class="ui middle aligned center aligned grid">
+  <div class="column">
+  contagiados
+  </div>
+  </div>
 </div>
 
 <div class="ui vertical footer segment">
