--- a/app.html
+++ b/app.html
@@ -46,6 +46,8 @@
   <div class="ui middle aligned center aligned grid">
   <div class="column">
    datos
+  </div>
+  </div>
 </div>
 
 <div class="ui black segment" id="contactos">
