--- a/app.html
+++ b/app.html
@@ -55,21 +55,20 @@
   </div>
 </div>
 
-
-<!-- <div class="ui vertical footer segment">
+<!--  <div class="ui vertical footer segment">
   <div class="ui center aligned container">   
     <div class="ui section divider"></div>    
     <div class="ui horizontal small divided link list">
       <a class="item"><i class="icon medkit"></i> Covid-19 </a>
     </div>
   </div>
-</div> -->
+</div>  -->
 
 </body>
 <script type="text/javascript">
   function init(){
 
-    $('.ui.checkbox').checkbox();
+    //$('.ui.checkbox').checkbox();
 
   }
   
