--- a/app.html
+++ b/app.html
@@ -68,7 +68,7 @@
 <script type="text/javascript">
   function init(){
 
-    //$('.ui.checkbox').checkbox();
+    $('.ui.checkbox').checkbox();
 
   }
   
