--- a/app.html
+++ b/app.html
@@ -23,46 +23,40 @@
     <a class="item" onclick="next(5)">Contagiados</a>
 </div>
 
+<div class="container">
 
-<div class="ui middle aligned center aligned grid" id="registro">
-  <div class="column">
-   registro
-  </div>
+      <div class="ui middle aligned center aligned grid" id="registro">
+        <div class="column">
+         registro
+        </div>
+      </div>
+
+
+      <div class="ui middle aligned center aligned grid" id="inicio">
+        <div class="column">
+         inicio sesion
+        </div>
+      </div>
+
+      <div class="ui middle aligned center aligned grid" id="datos">
+        <div class="column">
+         datos
+        </div>
+      </div>
+
+      <div class="ui middle aligned center aligned grid" id="contactos">
+        <div class="column">
+         contactos
+        </div>
+      </div>
+
+      <div class="ui middle aligned center aligned grid" id="contagiados">
+        <div class="column">
+         contagiados
+        </div>
+      </div>
+
 </div>
-
-
-<div class="ui middle aligned center aligned grid" id="inicio">
-  <div class="column">
-   inicio sesion
-  </div>
-</div>
-
-<div class="ui middle aligned center aligned grid" id="datos">
-  <div class="column">
-   datos
-  </div>
-</div>
-
-<div class="ui middle aligned center aligned grid" id="contactos">
-  <div class="column">
-   contactos
-  </div>
-</div>
-
-<div class="ui middle aligned center aligned grid" id="contagiados">
-  <div class="column">
-   contagiados
-  </div>
-</div>
-
-<!--  <div class="ui vertical footer segment">
-  <div class="ui center aligned container">   
-    <div class="ui section divider"></div>    
-    <div class="ui horizontal small divided link list">
-      <a class="item"><i class="icon medkit"></i> Covid-19 </a>
-    </div>
-  </div>
-</div>  -->
 
 </body>
 <script type="text/javascript">
