--- a/app.html
+++ b/app.html
@@ -115,12 +115,6 @@
 
       <div class="ui middle aligned center aligned grid" id="datos">
         <div class="column">
-          <h1 class="ui teal image header">      
-            <div class="content">
-              Fulano Gomez
-            </div>
-          </h1>
-
           <form class="ui massive form">
             <div class="ui one field">
               <div class="field">
@@ -166,13 +160,59 @@
 
       <div class="ui middle aligned center aligned grid" id="contactos">
         <div class="column">
-         contactos
+         <div class="ui massive divided list">
+            <div class="item">
+              <img class="ui avatar image" src="img/avatars/m2.jpg">
+              <div class="content">
+                <a class="header">Rachel</a>                
+              </div>
+            </div>
+            <div class="item">
+              <img class="ui avatar image" src="img/avatars/h1.jpg">
+              <div class="content">
+                <a class="header">Lindsay</a>                
+              </div>
+            </div>
+            <div class="item">
+              <img class="ui avatar image" src="img/avatars/m1.jpg">
+              <div class="content">
+                <a class="header">Matthew</a>                
+              </div>
+            </div>
+            <div class="item">
+              <img class="ui avatar image" src="img/avatars/m3.jpg">
+              <div class="content">
+                  <a class="header">Jenny Hess</a> 
+                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
+              </div>
+            </div>
+            <div class="item">
+              <img class="ui avatar image" src="img/avatars/h3.jpg">
+              <div class="content">
+                  <a class="header">Veronika Ossi</a> 
+                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
+              </div>
+            </div>
+         </div>
         </div>
       </div>
 
       <div class="ui middle aligned center aligned grid" id="contagiados">
         <div class="column">
-         contagiados
+         <div class="item">
+              <img class="ui avatar image" src="img/avatars/m3.jpg">
+              <div class="content">
+                  <a class="header">Jenny Hess</a> 
+                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
+              </div>
+            </div>
+            <div class="item">
+              <img class="ui avatar image" src="img/avatars/h3.jpg">
+              <div class="content">
+                  <a class="header">Veronika Ossi</a> 
+                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
+              </div>
+            </div>
         </div>
       </div>
 
