--- a/app.html
+++ b/app.html
@@ -204,7 +204,9 @@
 
       <div class="ui middle aligned center aligned grid" id="contagiados">
         <div class="column">
-         <div class="item">
+         <div class="ui massive divided list">
+          
+            <div class="item">
               <img class="ui avatar image" src="img/avatars/m3.jpg">
               <div class="content">
                   <a class="header">Jenny Hess</a> 
@@ -218,7 +220,10 @@
                   <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
               </div>
             </div>
+         </div>
         </div>
+
+       
       </div>
 
 
