--- a/app.html
+++ b/app.html
@@ -162,7 +162,7 @@
       </div>
 
 
-      <div class="ui middle aligned center aligned grid" id="contactos">
+      <div class="ui middle aligned left aligned grid" id="contactos">
         <div class="column">
          <div class="ui massive divided list">
             <div class="item">
@@ -202,7 +202,7 @@
       </div>
 
 
-      <div class="ui middle aligned center aligned grid" id="contagiados">
+      <div class="ui middle aligned left aligned grid" id="contagiados">
         <div class="column">
          <div class="ui massive divided list">          
             <div class="item">
