--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 		  </h1>
 		  <h2>Bajate la aplicación y cuidate mejor del Covid-19</h2>
 		  <div class="ui huge yellow message" id="chromemessage">
-			    Ingresa a este sitio desde tu telefono usando <b>Google Chrome</b> y luego instalá la aplicación.
+			    Ingresá a este sitio desde tu teléfono usando <b>Google Chrome</b> y luego instalá la aplicación.
 		  </div>
 		  <div class="ui huge green message" id="installed" style="display:none;">
-			    La aplicación se instalo correctamente. Cerrá el navegador y busca el ícono de la aplicación.			    
+			    La aplicación se instaló correctamente. Cerrá el navegador y busca el ícono de la aplicación para comenzar.			    
 		  </div>
 		  <div class="ui massive primary button" id="install">Instalar <i class="right cloud download icon"></i></div>
 		 	  
 		 	  <div class="ui small message">
-			    Ver <a href="#">Terminos y condiciones.</a>
+			    Ver <a href="#">Términos y condiciones.</a>
 			  </div>	
 	</div>	
 </div>
