--- a/index.html
+++ b/index.html
@@ -27,13 +27,20 @@
 	        </div>
 		  </h1>
 		  <h2>Bajate la aplicación y cuidate mejor del Covid-19</h2>
-		  <div class="ui huge yellow message" id="chromemessage">
+		  <div class="ui massive segment" id="initloading">
+		  	  <p></p>
+			  <div class="ui active inverted dimmer">
+			    <div class="ui text loader">Cargando...</div>
+			  </div>
+			  <p></p>
+		  </div>
+		  <div class="ui huge yellow message" id="chromemessage" style="display:none;">
 			    Ingresá a este sitio desde tu teléfono usando <b>Google Chrome</b> y luego instalá la aplicación.
 		  </div>
 		  <div class="ui huge green message" id="installed" style="display:none;">
 			    La aplicación se instaló correctamente. Cerrá el navegador y busca el ícono de la aplicación para comenzar.			    
 		  </div>
-		  <div class="ui massive primary button" id="install">Instalar <i class="right cloud download icon"></i></div>
+		  <div class="ui massive primary button" id="install" style="display:none;">Instalar <i class="right cloud download icon"></i></div>
 		 	  
 		  <div class="ui small message">
 		    Ver <a href="#">Términos y condiciones.</a>
