--- a/app.html
+++ b/app.html
@@ -25,7 +25,17 @@
 
 <div class="container"> 
 
-
+       <div class="ui middle aligned left aligned grid" id="initloading">
+        <div class="column">
+          <div class="ui massive segment">
+            <p></p>
+            <div class="ui active inverted dimmer">
+               <div class="ui text loader">Iniciando...</div>
+            </div>
+            <p></p>
+        </div>
+        </div>       
+      </div>
 
       <div class="ui middle aligned center aligned grid" id="registro">
         <div class="column">
@@ -51,7 +61,7 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="phone icon"></i>
-            <input type="text" name="phone" placeholder="Número de telefono">
+            <input type="text" name="phone" placeholder="Teléfono (Ej: 1150233224)">
           </div>
         </div>
         <div class="field">
