--- a/app.html
+++ b/app.html
@@ -84,7 +84,7 @@
 
     </form>      
         <div class="ui message">
-          ¿Tenes usuario? <a href="#">Inicia sesión</a>
+          ¿Tenes usuario? <a href="#" onclick="optionMenu(2)">Inicia sesión</a>
         </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
             </form>
 
             <div class="ui message">
-              ¿Sos nuevo? <a href="#">Registrate</a>
+              ¿Sos nuevo? <a href="#" onclick="optionMenu(1)">Registrate</a>
             </div>
     </div>
   </div>
