--- a/app.html
+++ b/app.html
@@ -43,7 +43,7 @@
         Registro
       </div>
     </h1>
-    <form class="ui massive form">
+    <form class="ui massive form" id="form_registro">
       <div class="ui one field">
         <div class="field">
           <div class="ui left icon input">
@@ -72,7 +72,7 @@
         <div class="ui orange inverted segment">
           <div class="field">
             <div class="ui left toggle checkbox">
-              <input type="checkbox" name="gift" tabindex="0" class="hidden">              
+              <input type="checkbox" name="covid" tabindex="0" class="hidden">              
               <label><i class="medkit icon"></i> Activar en caso de estar contagiado de Covid19</label>
             </div>
           </div>
@@ -129,7 +129,7 @@
 
       <div class="ui middle aligned center aligned grid" id="datos">
         <div class="column">
-          <form class="ui massive form">
+          <form class="ui massive form" id="form_datos">
             <div class="ui one field">
               <div class="field">
                 <div class="ui left icon input">
@@ -158,7 +158,7 @@
               <div class="ui orange inverted segment">
                 <div class="field">
                   <div class="ui left toggle checkbox">
-                    <input type="checkbox" name="gift" tabindex="0" class="hidden">              
+                    <input type="checkbox" name="covid" tabindex="0" class="hidden">              
                     <label><i class="medkit icon"></i> Activar en caso de estar contagiado de Covid19</label>
                   </div>
                 </div>
@@ -222,14 +222,14 @@
               <img class="ui avatar image" src="img/avatars/m3.jpg">
               <div class="content">
                   <a class="header">Jenny Hess</a> 
-                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
+                  <a class="item"><i class="icon red medkit"></i> Covid-19 </a>                
               </div>
             </div>
             <div class="item">
               <img class="ui avatar image" src="img/avatars/h3.jpg">
               <div class="content">
                   <a class="header">Veronika Ossi</a> 
-                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
+                  <a class="item"><i class="icon red medkit"></i> Covid-19 </a>             
               </div>
             </div>
          </div>
@@ -240,5 +240,6 @@
 </div>
 
 <script src="js/app.js"></script>
+<script src="js/dexie.min.js"></script>
 </body>
 </html>
