--- a/app.html
+++ b/app.html
@@ -169,7 +169,7 @@
       <div class="ui middle aligned left aligned grid" id="contactos">
         <div class="column">
           <button class="ui big basic button">
-            <i class="icon user"></i>
+            <i class="user plus icon"></i>
              Agregar Contacto
           </button>
          <div class="ui massive divided list">
@@ -214,7 +214,7 @@
       <div class="ui middle aligned left aligned grid" id="contagiados">
         <div class="column">
           <button class="ui big basic button">
-            <i class="icon user"></i>
+            <i class="user plus icon"></i>
              Agregar Contacto
           </button>
          <div class="ui massive divided list">          
