--- a/app.html
+++ b/app.html
@@ -52,7 +52,7 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="phone icon"></i>
-            <input type="text" name="phone" placeholder="Teléfono (Ej: 1150233224)">
+            <input type="number" name="phone" placeholder="Teléfono (Ej: 1150233224)">
           </div>
         </div>
         <div class="field">
@@ -95,7 +95,7 @@
                 <div class="field">
                   <div class="ui left icon input">
                     <i class="phone icon"></i>
-                    <input type="text" name="phone" placeholder="Número de telefono">
+                    <input type="number" name="phone" placeholder="Número de telefono">
                   </div>
                 </div>
                 <div class="field">
@@ -138,7 +138,7 @@
               <div class="field">
                 <div class="ui left icon input">
                   <i class="phone icon"></i>
-                  <input type="text" name="phone" placeholder="Número de telefono">
+                  <input type="number" name="phone" placeholder="Número de telefono">
                 </div>
               </div>
               <div class="field">
@@ -251,12 +251,12 @@
           <div class="image content">            
             <div class="description">              
               <p>Ingresá el número de teléfono de tu contacto.</p>              
-              <form class="ui massive form">
+              <form class="ui massive form" id="form_agregar">
               <div class="ui one field">
                 <div class="field">
                   <div class="ui left icon input">
                     <i class="phone icon"></i>
-                    <input type="text" name="phone" placeholder="Número de telefono">
+                    <input type="number" name="phone" placeholder="Número de telefono">
                   </div>
                 </div>                         
               </div>
