fetch guardar nuevo usuario

--- a/app.html
+++ b/app.html
@@ -65,12 +65,12 @@
             <input type="number" name="phone" placeholder="Teléfono (Ej: 1150233224)">
           </div>
         </div>
-        <div class="field">
+        <!-- <div class="field">
           <div class="ui left icon input">
             <i class="lock icon"></i>
             <input type="password" name="password" placeholder="Password">
           </div>
-        </div>
+        </div> -->
         <div class="ui orange inverted segment">
           <div class="field">
             <div class="ui left toggle checkbox">
@@ -85,9 +85,9 @@
       <div class="ui error message"></div>
 
     </form>      
-        <div class="ui message">
+        <!-- <div class="ui message">
           ¿Tenes usuario? <a href="#" onclick="optionMenu(2)">Inicia sesión</a>
-        </div>
+        </div> -->
         
         </div>
       </div>
@@ -151,12 +151,12 @@
                   <input type="number" name="phone" readonly placeholder="Número de telefono">
                 </div>
               </div>
-              <div class="field">
+              <!-- <div class="field">
                 <div class="ui left icon input">
                   <i class="lock icon"></i>
                   <input type="password" name="password" placeholder="Password">
                 </div>
-              </div>
+              </div> -->
               <div class="ui orange inverted segment">
                 <div class="field">
                   <div class="ui left toggle checkbox">
