desactivad auto foco agregar amigo 1

--- a/app.html
+++ b/app.html
@@ -266,7 +266,7 @@
                 <div class="field">
                   <div class="ui left icon input">
                     <i class="phone icon"></i>
-                    <input type="number" name="phone" placeholder="Número de telefono">
+                    <input type="number" name="phone" placeholder="Número de telefono" tabindex="-1">
                   </div>
                 </div>                         
               </div>
