--- a/app.html
+++ b/app.html
@@ -182,39 +182,8 @@
             <i class="user plus icon"></i> 
              Agregar Contacto
           </button>
-         <div class="ui massive divided list">
-            <div class="item">
-              <img class="ui avatar image" src="img/avatars/m2.jpg">
-              <div class="content">
-                <a class="header">Rachel</a>                
-              </div>
-            </div>
-            <div class="item">
-              <img class="ui avatar image" src="img/avatars/h1.jpg">
-              <div class="content">
-                <a class="header">Lindsay</a>                
-              </div>
-            </div>
-            <div class="item">
-              <img class="ui avatar image" src="img/avatars/m1.jpg">
-              <div class="content">
-                <a class="header">Matthew</a>                
-              </div>
-            </div>
-            <div class="item">
-              <img class="ui avatar image" src="img/avatars/m3.jpg">
-              <div class="content">
-                  <a class="header">Jenny Hess</a> 
-                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
-              </div>
-            </div>
-            <div class="item">
-              <img class="ui avatar image" src="img/avatars/h3.jpg">
-              <div class="content">
-                  <a class="header">Veronika Ossi</a> 
-                  <a class="item"><i class="icon red medkit"></i> Covid-19 </i></a>                
-              </div>
-            </div>
+         <div class="ui massive divided list" id="lista_contactos">
+            
          </div>
         </div>
       </div>
@@ -227,21 +196,8 @@
             <i class="user plus icon"></i> 
              Agregar Contacto
           </button>
-         <div class="ui massive divided list">          
-            <div class="item">
-              <img class="ui avatar image" src="img/avatars/m3.jpg">
-              <div class="content">
-                  <a class="header">Jenny Hess</a> 
-                  <a class="item"><i class="icon red medkit"></i> Covid-19 </a>                
-              </div>
-            </div>
-            <div class="item">
-              <img class="ui avatar image" src="img/avatars/h3.jpg">
-              <div class="content">
-                  <a class="header">Veronika Ossi</a> 
-                  <a class="item"><i class="icon red medkit"></i> Covid-19 </a>             
-              </div>
-            </div>
+         <div class="ui massive divided list" id="lista_contactos_contagiados">
+            
          </div>
         </div>       
       </div>
