--- a/app.html
+++ b/app.html
@@ -182,7 +182,7 @@
             <i class="user plus icon"></i> 
              Agregar Contacto
           </button>
-         <div class="ui massive divided list" id="lista_contactos">
+         <div class="ui middle list" id="lista_contactos">
             
          </div>
         </div>
@@ -196,7 +196,7 @@
             <i class="user plus icon"></i> 
              Agregar Contacto
           </button>
-         <div class="ui massive divided list" id="lista_contactos_contagiados">
+         <div class="ui middle list" id="lista_contactos_contagiados">
             
          </div>
         </div>       
