estilo listado contactos 1

--- a/app.html
+++ b/app.html
@@ -176,7 +176,7 @@
 
 
 
-      <div class="ui middle aligned left aligned grid" id="contactos">
+      <div class="ui middle aligned center aligned grid" id="contactos">
         <div class="column">
           <button class="ui big basic button">
             <i class="user plus icon"></i> 
@@ -191,7 +191,7 @@
 
 
 
-      <div class="ui middle aligned left aligned grid" id="contagiados">
+      <div class="ui middle aligned center aligned grid" id="contagiados">
         <div class="column">
           <button class="ui big basic button">
             <i class="user plus icon"></i> 
