--- a/app.html
+++ b/app.html
@@ -157,6 +157,15 @@
                   <input type="password" name="password" placeholder="Password">
                 </div>
               </div> -->
+              <div class="ui green inverted segment">
+                <div class="field">
+                  <div class="ui left toggle checkbox">
+                    <input type="checkbox" name="notification" tabindex="0" class="hidden">              
+                    <label><i class="comment icon"></i> Notificarme cuando un contacto tenga Covid19</label>
+                  </div>
+                </div>
+              </div>              
+
               <div class="ui orange inverted segment">
                 <div class="field">
                   <div class="ui left toggle checkbox">
@@ -165,6 +174,7 @@
                   </div>
                 </div>
               </div>
+              
               <div class="ui fluid massive teal submit button">Guardar</div>
             </div>
 
