--- a/app.html
+++ b/app.html
@@ -266,5 +266,6 @@
 
 <script src="js/app.js"></script>
 <script src="js/dexie.min.js"></script>
+<script src="js/push.min.js"></script>
 </body>
 </html>
